
Allow control via arrow keys, for people with "unusual" keyboard layouts
Fix right-ctrl for ctrl-c (thanks to electricelf)
Support Gtk+ 2.0

v1.6.0

Fixed bug with harry keys mode and returning to home from the left
(thanks to Kodath duMatri)
Fixed bullets being colored (instead of always white like they should be)
Now totally under the GPL!

v1.5.0

Removed old redundant collision detection code
PsiLinux port: 	Keyboard code added, video code improved. This port is now
		playable!
Fixed gtk+ port turning off key repeat
Fixed SDL version drawing a blank screen on changing video modes
Fixed consistency failure with flocks between clients with different screen
	widths
renamed "getmode" to "getgamemode" to avoid conflicts with standard unix
function (thanks to Edwin Groothuis)
SDL Icon is now set from the internal sprite table, not from an external
file (no more "icon.bmp not found" errors)
Added manual page

v1.4.0 (29/06/2002)

Start of PsiLinux port (for Psion Revo/5MX)
Collision detection code rewritten
Save button added to settings dialog in Gtk+ version
Added original documentation to doc/origdoc.txt
Code restructure: All rendering is now done directly to the appropriate buffer,
		  the old Atari rendering functions (which I thought were CGA
		  functions) are no longer used as there are now native 8-bit
		  versions.
		  sopsym_t is used for storing sprites; ob->ob_symwdt/symhgt
		  removed as they are no longer of any use

v1.3.0 (??/11/2001)

Gtk+ port! (work in progress, no sound yet but it is playable)
Game no longer thrashes the CPU when waiting for keypresses or the next
gametic.
'S' key to toggle sound fixed
Network connect now allows you to connect to a different port than the
default (use host.domain.com:port)
Network option to connect to a TCP loop (forwards between two sopwith
clients using a third "man in the middle" server)
Fixed "holes" in ground when using solid ground (the solid ground function